siente/web/configuracion/aquacun/resources/cssepc/main.css
/* ... */
.ikont-hcl-deberiair{
    font-family: open;
    font-size: 1em;
    text-decoration: none;
    color: #000;
}

#graficoAvanceFisico > div {
    width: 100%;
    height: 100%;
}

.ikont-hcl-deberiair:hover{
    color: #58595B;
}

.img-detalle-proyecto{
    background-image: url("../imgs/proyecto/detalle_sprite.png");
    background-repeat: no-repeat;
    display: block !important;
}

.ikont-hcl-imgduracion{
    width: 50px;
    height: 60px;
    background-position: 0px -50px;
    margin: 0px auto;
}

.ikont-hcl-imgimpactosocial{
    width: 50px;
    height: 60px;
    background-position: -50px -50px;
    margin: 0px auto;
}

.ikont-hcl-imgestadoproyecto{
    width: 60px;
    height: 60px;
    margin: 0px auto;
}

.ikont-hcl-imgestadoproyecto.estado0{
    background-position: 0px -105px;
}

.ikont-hcl-imgestadoproyecto.estado1{
    background-position: -55px -105px;
}

.ikont-hcl-imgestadoproyecto.estado2, .ikont-hcl-imgestadoproyecto.estado3{
    background-position: -220px -105px;
}

.ikont-hcl-imgestadoproyecto.estado5, .ikont-hcl-imgestadoproyecto.estado4{
    background-position: -165px -105px;
}

.ikont-hcl-imgestadoproyecto.estado6{
    background-position: -110px -105px;
}

.ikont-hcl-imgtipoproyecto{
    width: 50px;
    height: 60px;
    margin: 0px auto;
}

.ikont-hcl-imgtipoproyecto.tipo1{
    background-position: -328px -180px;
    width: 60px;
}

.ikont-hcl-imgtipoproyecto.tipo2{
    background-position: -162px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo3{
    background-position: -55px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo4{
    background-position: -770px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo5{
    background-position: -270px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo6{
    background-position: -500px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo7{
    background-position: -454px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo8{
    background-position: -393px -180px;
}


.ikont-hcl-imgtipoproyecto.tipo9{
    background-position: -224px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo10{
    background-position: -110px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo11{
    background-position: -10px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo12{
    background-position: -720px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo13{
    background-position: -610px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo14{
    background-position: -550px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo15{
    background-position: -500px -180px;
}

.ikont-hcl-imgtipoproyecto.tipo16{
    background-position: -270px -180px;
}

.ikont-hpg-griddetaob, .ikont-hpg-pg_impactosocial, .ikont-hgi-imgestobra, .ikont-hpg-tipo_obra{
    text-align: center;
    width: 200px;
}

.content-info-contrato{
    width: 450px;
    height: 60px;
    overflow: hidden;
    border-bottom: dashed 1px #58595B;
    margin: 0px 5px 4px;
}

.content-info-contrato span {
    font-family: open;
    font-size: 0.8em;
    color: #58595B;
}

.ikont-hcl-zoom-contrante{
    background-image: url("../imgs/icn_1.png");
    background-repeat: no-repeat;
    display: block !important;
    width: 38px;
    height: 38px;
}

.ikont-hcl-zoom-supervosor{
    background-image: url("../imgs/icn_2.png");
    background-repeat: no-repeat;
    display: block !important;
    width: 38px;
    height: 37px;
}

.ikont-hcl-zoom-nocontrato{
    background-image: url("../imgs/icn_3.png");
    background-repeat: no-repeat;
    display: block !important;
    width: 38px;
    height: 37px;
}

.ikont-hcl-zoom-contratista{
    background-image: url("../imgs/icn_4.png");
    background-repeat: no-repeat;
    display: block !important;
    width: 39px;
    height: 37px;
}

.ikont-hot-zoom-numvobra{
    font-size: 2.5em;
}

.ikont-hot-zoom-soliobra, .ikont-hot-zoom-numvaltotobra{
    font-size: 2em;
    color: #7E7E7E;
}

.ikont-hpg-datosrelevantes label{
    font-family: open;
    font-size: 0.8em;
    color: #58595B;
}

.ikont-hpg-datosrelevantes span{
    font-family: open;
    font-size: 0.9em;
}

.ikont-acl-btadjuntarimagen{
    background-image: url("../imgs/p_examinar.png");
    background-repeat: no-repeat;
    width:85px;
    height:25px;
    display:block;
    margin:3px;
    background-position: 0px 0px;
}

.ikont-acl-btadjuntarimagen:hover {
    background-position: 0px -25px;
}

.ikont-acl-modificarciudadno{
    background-image:url(../imgs/p_guardar.png);
    width:85px;
    height:25px;
    display:block;
    margin:3px;
    background-position: 0px 0px;
    float:right;
}
.ikont-acl-modificarciudadno:hover {
    background-position: 0px -25px;
}
.ikont-acl-btncancelarciudadano{
    background-image:url(../imgs/p_cancelar.png);
    width:85px;
    height:25px;
    display:block;
    margin:3px;
    background-position: 0px 0px;
    float:right;
}
.ikont-acl-btncancelarciudadano:hover {
    background-position: 0px -25px;
}

/*css de modificar proyecto*/
.ikont-mp-cronograma-mod{
    position: fixed;
    z-index: 100;
    left: 366px;
    top: 60px;
    width: 631px;
}

.ikont-hpg-mpcronogramamod{
    color: #006584;
}

/*
css usuario modificacion
*/
.ikont-hot-editarmiperfil{
    color: #1C8F14;
}
/*Css Para el nuevo menu administrar convenio*/
.ikont-hpg-menu-contenido-administrar-convenio{
    background-color: transparent;
    width: 100%;
    height: 60px;
    border-style: solid;
    border-width: 0px;
    border-color: #6B6B6B;
    position: relative;
    top: 0px;
    z-index: 1000;
    border-bottom: solid 1px #F2F2F2;
}

.ikont-hpg-menu-contenido-administrar-convenio.scrollactive{
    height: 60px;
    position: fixed;
    left: 0px;
    background-color: #006584;
    -moz-transform: scaleY(1);-moz-transition: all 0.5s;
    -webkit-transform: scaleY(1);-webkit-transition: all 0.5s ;
    -o-transform: scaleY(1);-o-transition: all 0.5s;
    -ms-transform: scaleY(1);-ms-transition: all 0.5s;
    transform: scaleY(1);transition: all 0.5s;
}

.ikont-hpg-menu-contenido-administrar-convenio{
    margin: 0px auto;
}
/* ... */

